# claude-mcp-waldur

./: .env  .env.example  README.md  config.py  directory_structure_chart.md  pyproject.toml
api_specs/: waldur_openapi_yaml_search.py
example_config_claude/: claude_desktop_config_example.json
servers/: read-only.py  read-write.py
src/: directory_structure_chart.md  mcp_instance.py  misc_tools.py  openportal_tools.py  retrieve_api_endpoint_tool.py  utils.py  waldur_auth_tool.py  waldur_delete_tools.py  waldur_get_tools.py  waldur_patch_tools.py  waldur_post_tools.py
src/cache/: waldur-openapi-schema.yaml
src/prompts/: task_planner.py
