[project]
name = "mcp-basic-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "mcp>=1.10.1",
    "openai>=1.93.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
]

[tool.uv.workspace]
members = [
    "faiss",
    "langchain",
]
