[project]
name = "claude-mcp-waldur"
version = "0.1.0"
description = "MCP servers and tools for integrating Claude with Waldur API for Waldur resource management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "environ>=1.0",
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "mcp>=1.10.1",
    "openai>=1.93.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "servers*"]

[tool.setuptools.package-dir]
"" = "."

[tool.uv.workspace]
members = [
    "faiss",
    "langchain",
]
